# cargo-gpu

./: Cargo.toml  README.md
crates/cargo-gpu/: Cargo.toml  build.rs
crates/cargo-gpu/src/: args.rs  build.rs  config.rs  install.rs  install_toolchain.rs  legacy_target_specs.rs  lib.rs  lockfile.rs  main.rs  metadata.rs  show.rs  spirv_cli.rs  spirv_source.rs  target_specs.rs  test.rs
crates/shader-crate-template/: Cargo.toml
crates/spirv-builder-cli/src/: main.rs
crates/xtask/src/: main.rs
