[package]
name = "cargo-gpu"
version = "0.1.0"
edition = "2021"
description = "Generates shader .spv files from rust-gpu shader crates"
repository = "https://github.com/Rust-GPU/cargo-gpu"
readme = "../../README.md"
keywords = ["gpu", "compiler"]
build = "build.rs"
default-run = "cargo-gpu"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata.workspace = true
anyhow.workspace = true
spirv-builder = { workspace = true, features = ["clap", "watch"] }
clap.workspace = true
directories.workspace = true
env_logger.workspace = true
log.workspace = true
relative-path.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
semver.workspace = true

[dev-dependencies]
test-log.workspace = true

[lints]
workspace = true
